sealed-secrets-controller/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sealed-secrets
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
  - host: sealed.secrets
    http:
      paths:
      - path: /
        backend:
          serviceName: sealed-secrets-controller
          servicePort: 8080
